# esync

./: .esync.toml.example  .gitignore  CLAUDE.md  README.md  demo.tape  esync.toml.example  go.mod  integration_test.go  main.go  pyproject.toml  readme.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
cmd/: check.go  edit.go  init.go  root.go  status.go  sync.go  sync_test.go
demo/: .esync.toml  .gitignore  README.md  demo.tape
demo/config/: secrets.env  settings.toml
demo/src/: handler.go  main.go
docs/plans/: 2026-03-01-go-rewrite-design.md  2026-03-01-go-rewrite-plan.md  2026-03-01-tui-improvements-design.md  2026-03-01-tui-improvements-plan.md  2026-03-03-cursor-expand-design.md  2026-03-03-cursor-expand-plan.md  2026-03-08-include-filter-design.md  2026-03-08-include-filter-plan.md
docs/superpowers/plans/: 2026-03-18-edit-config.md
docs/superpowers/specs/: 2026-03-18-edit-config-design.md
esync/: __init__.py  cli.py  config.py  sync_manager.py  watchdog_watcher.py  watcher_base.py  watchman_watcher.py
internal/config/: config.go  config_test.go
internal/logger/: logger.go  logger_test.go
internal/syncer/: syncer.go  syncer_test.go
internal/tui/: app.go  dashboard.go  dashboard_test.go  logview.go  styles.go
internal/watcher/: watcher.go  watcher_test.go
