[project]
name = "esync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pywatchman>=2.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "tomli-w>=1.2.0",
    "typer>=0.15.1",
    "watchdog>=6.0.0",
]

[project.scripts]
esync = "esync.cli:app"
